--- a/resources/less/app.less
+++ b/resources/less/app.less
@@ -5,6 +5,7 @@
 @import "theme/button.less";
 @import "theme/field.less";
 @import "theme/breadcrumb.less";
+@import "theme/tip.less";
 
 
 @import "sections/header.less";
