--- a/resources/less/snippets/header.desktop.less
+++ b/resources/less/snippets/header.desktop.less
@@ -184,6 +184,11 @@
 					font-weight: 300;
 				}
 			}
+			.btn {
+				svg {
+					margin-right: 10px;
+				}
+			}
 			& > *:not(:last-child) {
 				margin-right: 14px;
 			}
