--- a/resources/less/theme/button.less
+++ b/resources/less/theme/button.less
@@ -1,5 +1,5 @@
 .btn {
-	padding: 8px;
+	padding: 8px 10px;
 	display: flex;
 	width: max-content;
 	height: max-content;
@@ -11,10 +11,10 @@
 	background-color: #eeeff4;
 	color: black;
 	font-weight: 300;
+	border-radius: 4px;
 
 	svg {
 		height: 20px;
-		margin-right: 5px;
 	}
 
 	&.primary {
