--- a/public_html/css/app.css
+++ b/public_html/css/app.css
@@ -1477,6 +1477,24 @@ svg {
 #template_shop_product .left .frame {
   position: relative;
 }
+#template_shop_product .left .frame .expand-btn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  z-index: 2;
+  background-color: rgba(0, 0, 0, 0.4);
+  cursor: pointer;
+  padding: 6px;
+  border-radius: 4px;
+  transition: background-color 0.15s ease-in-out;
+}
+#template_shop_product .left .frame .expand-btn svg {
+  width: 23px;
+  fill: white;
+}
+#template_shop_product .left .frame .expand-btn:hover {
+  background-color: rgba(0, 0, 0, 0.5);
+}
 #template_shop_product .left .frame .arrow-nav {
   position: absolute;
   top: 0;
@@ -1615,14 +1633,47 @@ svg {
   position: relative;
   text-decoration: line-through;
 }
+#template_shop_product .right .parameter-list {
+  margin-top: 20px;
+  max-width: 344px;
+}
+#template_shop_product .right .parameter-list .parameter-item {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  font-size: 1.1rem;
+  background-color: #fcfcfc;
+  border: 1px solid #ececec;
+  border-radius: 4px;
+  padding: 10px 25px;
+  margin-bottom: 7px;
+}
+#template_shop_product .right .parameter-list .parameter-item .parameter-key {
+  font-weight: 400;
+}
 #template_shop_product .right .sizes-wrapper {
   margin-top: 50px;
 }
 #template_shop_product .right .sizes-wrapper .title {
   display: flex;
 }
-#template_shop_product .right .sizes-wrapper .title button {
+#template_shop_product .right .sizes-wrapper .title .how-to-choose-size-btn {
   margin-left: auto;
+  display: flex;
+  background-color: transparent;
+  cursor: pointer;
+  text-decoration: underline;
+  color: #9d9d9d;
+}
+#template_shop_product .right .sizes-wrapper .title .how-to-choose-size-btn svg {
+  width: 14px;
+  margin-right: 7px;
+  fill: #9d9d9d;
+}
+#template_shop_product .right .sizes-wrapper .title .how-to-choose-size-btn:hover {
+  color: black;
+}
+#template_shop_product .right .sizes-wrapper .title .how-to-choose-size-btn:hover svg {
+  fill: black;
 }
 #template_shop_product .right .sizes-wrapper .size-list {
   margin-top: 5px;
@@ -1756,22 +1807,14 @@ svg {
 #template_shop_product .right .buttons .btn.add-to-wishlist:active svg {
   fill: white;
 }
-#template_shop_product .right .parameter-list {
-  margin-top: 20px;
-  max-width: 344px;
+#template_shop_product .right .note {
+  margin-top: 10px;
 }
-#template_shop_product .right .parameter-list .parameter-item {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  font-size: 1.1rem;
-  background-color: #fcfcfc;
-  border: 1px solid #ececec;
-  border-radius: 4px;
-  padding: 10px 25px;
-  margin-bottom: 7px;
-}
-#template_shop_product .right .parameter-list .parameter-item .parameter-key {
+#template_shop_product .right .note p {
+  color: #a8a8a8;
   font-weight: 400;
+  line-height: 1.3;
+  text-align: center;
 }
 #template_shop_product .bottom .tab-list {
   display: grid;
@@ -1794,7 +1837,7 @@ svg {
 #template_shop_product .bottom .tab-content {
   margin-top: 40px;
 }
-#template_shop_product .bottom .tab-content .description > *:first-child {
+#template_shop_product .bottom .tab-content .description > *:first-child span {
   font-weight: 500;
   font-size: 1.3rem;
 }
@@ -1809,6 +1852,129 @@ svg {
 }
 #template_shop_product .bottom .tab-content .description ul li p {
   display: inline;
+}
+#template_shop_product .fade-enter-active,
+#template_shop_product .fade-leave-active {
+  transition: opacity 0.7s;
+}
+#template_shop_product .fade-enter,
+#template_shop_product .fade-leave-to {
+  opacity: 0;
+}
+#template_shop_product .gallery {
+  z-index: 101;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  position: fixed;
+  background-color: #f2f2f2;
+}
+#template_shop_product .gallery .close {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  z-index: 5;
+  cursor: pointer;
+  padding: 5px;
+  border-radius: 9999px;
+  background-color: transparent;
+}
+#template_shop_product .gallery .close svg {
+  width: 20px;
+  fill: rgba(0, 0, 0, 0.4);
+  transition: fill 0.15s ease-in-out;
+}
+#template_shop_product .gallery .close:hover svg {
+  fill: rgba(0, 0, 0, 0.7);
+}
+#template_shop_product .gallery .picture-list {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+#template_shop_product .gallery .picture-list .slick-list,
+#template_shop_product .gallery .picture-list .slick-list * {
+  height: 100%;
+}
+#template_shop_product .gallery .picture-list .picture-item {
+  display: inline-flex !important;
+  justify-content: center;
+  align-items: center;
+}
+#template_shop_product .gallery .picture-list .picture-item img {
+  width: auto;
+  height: auto;
+  max-width: calc(100vw - 20px);
+  max-height: calc(100vh - 20px);
+}
+#template_shop_product .gallery .gallery-navigation {
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 20px;
+  display: flex;
+  justify-content: center;
+}
+#template_shop_product .gallery .gallery-navigation .slick-dots {
+  display: flex;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.7);
+  border-radius: 9999px;
+  padding: 10px 15px;
+}
+#template_shop_product .gallery .gallery-navigation .slick-dots li:not(:last-child) {
+  margin-right: 10px;
+}
+#template_shop_product .gallery .gallery-navigation .slick-dots li button {
+  font-size: 0;
+  display: block;
+  width: 8px;
+  height: 8px;
+  background-color: #969696;
+  border-radius: 9999px;
+  cursor: pointer;
+  transition: background-color 0.15s ease-in-out;
+}
+#template_shop_product .gallery .gallery-navigation .slick-dots li.slick-active button {
+  background-color: white;
+}
+#template_shop_product .gallery .arrow-wrapper {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  z-index: 5;
+  display: flex;
+  align-items: center;
+  pointer-events: none;
+}
+#template_shop_product .gallery .arrow-wrapper:first-child {
+  left: 50px;
+}
+#template_shop_product .gallery .arrow-wrapper:last-child {
+  right: 50px;
+}
+#template_shop_product .gallery .arrow-wrapper .arrow {
+  width: 50px;
+  height: 50px;
+  background-color: rgba(0, 0, 0, 0.1);
+  border-radius: 99999px;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  transition: background-color 0.15s ease-in-out;
+  pointer-events: auto;
+}
+#template_shop_product .gallery .arrow-wrapper .arrow svg {
+  width: 50%;
+  height: 100%;
+  fill: #f2f2f2;
+}
+#template_shop_product .gallery .arrow-wrapper .arrow:hover {
+  background-color: rgba(0, 0, 0, 0.15);
 }
 #template_badbrowser {
   background-color: black;
