--- a/resources/less/templates/shop.product.less
+++ b/resources/less/templates/shop.product.less
@@ -16,9 +16,27 @@
 		}
 
 		.frame {
-			// border: 1px solid #d7d7d7;
 			position: relative;
 
+			.expand-btn {
+				position: absolute;
+				top: 10px;
+				right: 10px;
+				z-index: 2;
+				background-color: fade(black, 40%);
+				cursor: pointer;
+				padding: 6px;
+				border-radius: 4px;
+				transition: background-color .15s ease-in-out;
+
+				svg {
+					width: 23px;
+					fill: white;
+				}
+				&:hover {
+					background-color: fade(black, 50%);
+				}
+			}
 			.arrow-nav {
 				position: absolute;
 				top: 0;
@@ -174,14 +192,54 @@
 				text-decoration: line-through;
 			}
 		}
+		.parameter-list {
+			margin-top: 20px;
+			max-width: 344px;
+
+			.parameter-item {
+				display: grid;
+				grid-template-columns: repeat(2, 1fr);
+				font-size: 1.1rem;
+				background-color: #fcfcfc;
+				border: 1px solid #ececec;
+				border-radius: 4px;
+				padding: 10px 25px;
+				margin-bottom: 7px;
+
+				.parameter-key {
+					font-weight: 400;
+				}
+				.parameter-value {
+
+				}
+			}
+		}
 		.sizes-wrapper {
 			margin-top: 50px;
 
 			.title {
 				display: flex;
 
-				button {
+				.how-to-choose-size-btn {
 					margin-left: auto;
+					display: flex;
+					background-color: transparent;
+					cursor: pointer;
+					text-decoration: underline;
+					color: #9d9d9d;
+
+					svg {
+						width: 14px;
+						margin-right: 7px;
+						fill: #9d9d9d;
+					}
+					&:hover {
+						color: black;
+
+						svg {
+							fill: black;
+						}
+					}
 				}
 			}
 
@@ -342,26 +400,14 @@
 				}
 			}
 		}
-		.parameter-list {
-			margin-top: 20px;
-			max-width: 344px;
+		.note {
+			margin-top: 10px;
 
-			.parameter-item {
-				display: grid;
-				grid-template-columns: repeat(2, 1fr);
-				font-size: 1.1rem;
-				background-color: #fcfcfc;
-				border: 1px solid #ececec;
-				border-radius: 4px;
-				padding: 10px 25px;
-				margin-bottom: 7px;
-
-				.parameter-key {
-					font-weight: 400;
-				}
-				.parameter-value {
-
-				}
+			p {
+				color: #a8a8a8;
+				font-weight: 400;
+				line-height: 1.3;
+				text-align: center;
 			}
 		}
 	}
@@ -390,7 +436,7 @@
 			margin-top: 40px;
 
 			.description {
-				& > *:first-child {
+				& > *:first-child span {
 					font-weight: 500;
 					font-size: 1.3rem;
 				}
@@ -413,4 +459,140 @@
 			}
 		}
 	}
+
+
+
+
+
+	.fade-enter-active, .fade-leave-active {
+		transition: opacity .7s;
+	}
+	.fade-enter, .fade-leave-to {
+		opacity: 0;
+	}
+	.gallery {
+		z-index: 101;
+		.absolutely-covered;
+		position: fixed;
+		background-color: #f2f2f2;
+
+		.close {
+			position: absolute;
+			top: 20px;
+			right: 20px;
+			z-index: 5;
+			cursor: pointer;
+			padding: 5px;
+			border-radius: 9999px;
+			background-color: transparent;
+			
+
+			svg {
+				width: 20px;
+				fill: fade(black, 40%);
+				transition: fill .15s ease-in-out;
+			}
+
+			&:hover svg {
+				fill: fade(black, 70%);
+			}
+		}
+		.picture-list {
+			.absolutely-covered;
+
+			.slick-list, .slick-list * {
+				height: 100%;
+			}
+
+			
+
+			.picture-item {
+				display: inline-flex !important;
+				justify-content: center;
+				align-items: center;
+
+				img {
+					width: auto;
+					height: auto;
+					max-width: calc(100vw - 20px);
+					max-height: calc(100vh - 20px);
+				}
+			}
+		}
+		.gallery-navigation {
+			position: absolute;
+			left: 0;
+			right: 0;
+			bottom: 20px;
+			display: flex;
+			justify-content: center;
+
+			.slick-dots {
+				display: flex;
+				align-items: center;
+				background-color: fade(black, 70%);
+				border-radius: 9999px;
+				padding: 10px 15px;
+
+				li {
+					&:not(:last-child) {
+						margin-right: 10px;
+					}
+					button {
+						font-size: 0;
+						display: block;
+						width: 8px;
+						height: 8px;
+						background-color: #969696;
+						border-radius: 9999px;
+						cursor: pointer;
+						transition: background-color .15s ease-in-out;
+					}
+					&.slick-active button {
+						background-color: white;
+					}
+				}
+			}
+		}
+		.arrow-wrapper {
+			position: absolute;
+			top: 0;
+			bottom: 0;
+			z-index: 5;
+			display: flex;
+			align-items: center;
+			pointer-events: none;
+
+			&:first-child {
+				left: 50px;
+			}
+			&:last-child {
+				right: 50px;
+			}
+			.arrow {
+				width: 50px;
+				height: 50px;
+				background-color: fade(black, 10%);
+				border-radius: 99999px;
+				cursor: pointer;
+				display: flex;
+				justify-content: center;
+				transition: background-color .15s ease-in-out;
+				pointer-events: auto;
+
+				svg {
+					width: 50%;
+					height: 100%;
+					fill: #f2f2f2;
+				}
+				&:hover {
+					background-color: fade(black, 15%);
+				}
+			}
+		}
+	}
+
+
+
+
 }
