--- a/resources/less/templates/shop.product.less
+++ b/resources/less/templates/shop.product.less
@@ -1,5 +1,5 @@
 #template_shop_product {
-	.top {
+	& > .top {
 		margin-top: 50px;
 		display: grid;
 		grid-template-columns: 1fr .606fr;
@@ -81,7 +81,6 @@
 				.slick-slider {
 					z-index: 0;
 				}
-
 				.image-wrapper {
 					position: relative;
 					cursor: crosshair;
@@ -120,7 +119,6 @@
 						opacity: 1;
 					}
 				}
-
 				.mini-image {
 					border-radius: 4px;
 					background-position: center;
@@ -132,7 +130,7 @@
 			}
 		}
 		.right {
-			& > .vendor {
+			.vendor {
 				font-weight: 500;
 				font-size: 1.1rem;
 				letter-spacing: 0.1rem;
@@ -165,31 +163,9 @@
 					}
 				}
 			}
-			.price-wrapper {
-				display: flex;
-				align-items: center;
-				font-size: 2.5rem;
-				margin-top: 20px;
-				margin-left: 17px;
+			
+			@import "../snippets/shop.product.pricing.less";
 
-				.price, .compare-at-price {
-					&:after {
-						content: '₽';
-						margin-left: 5px;
-					}
-				}
-				.price {
-					font-weight: 500;
-					color: black;
-				}
-				.compare-at-price {
-					font-weight: 500;
-					margin-left: 20px;
-					color: #949597;
-					position: relative;
-					text-decoration: line-through;
-				}
-			}
 			.parameter-list {
 				margin-top: 20px;
 				max-width: 344px;
@@ -207,153 +183,24 @@
 					.parameter-key {
 						font-weight: 400;
 					}
-					.parameter-value {
-
-					}
-				}
-			}
-			.sizes-wrapper {
-				margin-top: 50px;
-
-				.title {
-					display: flex;
-
-					.how-to-choose-size-btn {
-						margin-left: auto;
-						display: flex;
-						background-color: transparent;
-						cursor: pointer;
-						text-decoration: underline;
-						color: #9d9d9d;
-
-						svg {
-							width: 14px;
-							margin-right: 7px;
-							fill: #9d9d9d;
-						}
-						&:hover {
-							color: black;
-
-							svg {
-								fill: black;
-							}
-						}
-					}
-				}
-
-				.size-list {
-					margin-top: 5px;
-					display: grid;
-					grid-template-columns: repeat(5, 1fr);
-					grid-gap: 10px;
-					max-width: 430px;
-
-					.size-item {
-						position: relative;
-
-						label {
-							display: block;
-							background-color: white;
-							text-align: center;
-							border: 1px solid #d0d0d0;
-							padding: 12px 0px;
-							cursor: pointer;
-							border-radius: 4px;
-
-							&:hover + .tip {
-								transform: translateY(0);
-								opacity: 1;
-							}
-						}
-
-						input {
-							display: none;
-						}
-						input:checked ~ .tip {
-							opacity: 0 !important;
-							transform: translateY(-5px) !important;
-						}
-						input:checked + label {
-							background-color: #7122e3;
-							border: 1px solid #7122e3;
-							color: white;
-							font-weight: 400;
-						}
-						input:disabled + label {
-							color: gray;
-						}
-						&[instock="1"] label {
-							color: #ff5e00;
-							font-weight: 400;
-						}
-					}
-				}
-			}
-			.colors-wrapper {
-				margin-top: 50px;
-
-				.color-list {
-					display: grid;
-					grid-template-columns: repeat(5, 1fr);
-					grid-gap: 10px;
-					max-width: 430px;
-					margin-top: 5px;
-
-					.color-item {
-						height: 40px;
-						position: relative;
-						background-position: center;
-						background-size: cover;
-						background-repeat: no-repeat;
-						border-radius: 4px;
-						overflow: hidden;
-
-						a {
-							.absolutely-covered;
-						}
-						&.current a {
-							background-color: fade(#40006c, 35%);
-							display: flex;
-							justify-content: center;
-							align-items: center;
-
-							.tick {
-								width: 20px;
-								height: 20px;
-								padding: 3px;
-								border-radius: 9999px;
-
-								border: 2px solid white;
-
-								svg {
-									fill: white;
-								}
-							}
-						}
-					}
 				}
 			}
 
+			@import "../snippets/shop.product.sizes.less";
+			@import "../snippets/shop.product.colors.less";
+			
 			.buttons {
 				display: grid;
-				grid-template-columns: 1fr;
-				grid-gap: 30px;
+				grid-template-columns: 1fr auto;
+				grid-gap: 10px;
 				margin-top: 50px;
 
-				.top {
-					display: grid;
-					grid-template-columns: 1fr auto;
-					grid-gap: 10px;
-				}
 				.btn {
 					width: 100%;
 					font-weight: 300;
 					font-size: 1.1rem;
 					padding: 20px;
 
-					&.buy {
-
-					}
 					&.add-to-cart {
 						background-color: #1b1b1b;
 						width: 100%;
@@ -402,7 +249,7 @@
 		}
 	}
 
-	.bottom {
+	& > .bottom {
 		margin-top: 50px;
 		margin-bottom: 200px;
 
@@ -421,7 +268,7 @@
 
 				&.active {
 					color: black;
-					border-bottom: 3px solid black;
+					border-bottom: 3px solid #7122e3;
 				}
 			}
 		}
@@ -429,158 +276,62 @@
 			margin-top: 40px;
 
 			.description {
-				& > *:first-child span {
-					font-weight: 500;
-					font-size: 1.3rem;
-				}
-				p {
-					margin-bottom: 10px;
-					line-height: 1.25;
-					font-size: 1.1rem;
-				}
-				ul {
+				display: grid;
+				grid-template-columns: 1.2fr 1fr;
+				
 
-					li {
-						list-style-type: disc;
-						list-style-position: inside;
+				.text {
+					& > *:first-child span {
+						font-weight: 500;
+						font-size: 1.3rem;
+					}
+					p {
+						margin-bottom: 10px;
+						line-height: 1.25;
+						font-size: 1.1rem;
+					}
+					ul {
 
-						p {
-							display: inline;
+						li {
+							list-style-type: disc;
+							list-style-position: inside;
+
+							p {
+								display: inline;
+							}
 						}
 					}
 				}
-			}
-		}
-	}
+				.rand-picture {
+					display: flex;
+					justify-content: center;
+					align-items: center;
 
-
-	.fade-enter-active, .fade-leave-active {
-		transition: opacity .7s;
-	}
-	.fade-enter, .fade-leave-to {
-		opacity: 0;
-	}
-	.gallery {
-		z-index: 101;
-		.absolutely-covered;
-		position: fixed;
-		background-color: #f2f2f2;
-
-
-		.close {
-			position: absolute;
-			top: 20px;
-			right: 20px;
-			z-index: 5;
-			cursor: pointer;
-			padding: 5px;
-			border-radius: 9999px;
-			background-color: transparent;
-
-
-			svg {
-				width: 20px;
-				fill: fade(black, 40%);
-				transition: fill .15s ease-in-out;
-			}
-
-			&:hover svg {
-				fill: fade(black, 70%);
-			}
-		}
-		.picture-list {
-			.absolutely-covered;
-
-			.slick-list, .slick-list * {
-				height: 100%;
-			}
-
-
-
-			.picture-item {
-				display: inline-flex !important;
-				justify-content: center;
-				align-items: center;
-
-				img {
-					width: auto;
-					height: auto;
-					max-width: calc(100vw - 20px);
-					max-height: calc(100vh - 20px);
-				}
-			}
-		}
-		.gallery-navigation {
-			position: absolute;
-			left: 0;
-			right: 0;
-			bottom: 20px;
-			display: flex;
-			justify-content: center;
-
-			.slick-dots {
-				display: flex;
-				align-items: center;
-				background-color: fade(black, 70%);
-				border-radius: 9999px;
-				padding: 10px 15px;
-
-				li {
-					&:not(:last-child) {
-						margin-right: 10px;
-					}
-					button {
-						font-size: 0;
-						display: block;
-						width: 8px;
-						height: 8px;
-						background-color: #969696;
-						border-radius: 9999px;
-						cursor: pointer;
-						transition: background-color .15s ease-in-out;
-					}
-					&.slick-active button {
-						background-color: white;
+					img {
+						max-width: 360px;
+						border-radius: 4px;
 					}
 				}
 			}
 		}
-		.arrow-wrapper {
-			position: absolute;
-			top: 0;
-			bottom: 0;
-			z-index: 5;
-			display: flex;
-			align-items: center;
-			pointer-events: none;
 
+		.live-chat {
+			text-align: center;
+			margin-top: 50px;
+			text-align: center;
 
-			&:first-child {
-				left: 50px;
-			}
-			&:last-child {
-				right: 50px;
-			}
-			.arrow {
-				width: 50px;
-				height: 50px;
-				background-color: fade(black, 10%);
-				border-radius: 99999px;
+			button {
+				border-radius: 4px;
+				padding: 11px 32px;
+				background-color: transparent;
+				border: 1px solid #969696;
+				font-size: 1.2rem;
+				letter-spacing: 0.05rem;
 				cursor: pointer;
-				display: flex;
-				justify-content: center;
-				transition: background-color .15s ease-in-out;
-				pointer-events: auto;
-
-				svg {
-					width: 50%;
-					height: 100%;
-					fill: #f2f2f2;
-				}
-				&:hover {
-					background-color: fade(black, 15%);
-				}
 			}
 		}
 	}
+
+	@import "../snippets/shop.product.gallery.less";
+	@import "../snippets/shop.product.found-cheaper-modal.less";
 }
