--- a/resources/less/app.less
+++ b/resources/less/app.less
@@ -12,6 +12,7 @@
 @import "sections/welcome.less";
 @import "sections/collections.less";
 @import "sections/search.less";
+@import "sections/cart.less";
 
 
 @import "templates/home.less";
